--- a/.github/workflows/github-actions.yml
+++ b/.github/workflows/github-actions.yml
@@ -10,8 +10,9 @@
 name: Publish Docker image
 
 on:
-  release:
-    types: push
+  push:
+    branches:
+      - main
 jobs:
   push_to_registry:
     name: Push Docker image to Docker Hub
